Wed Jun 23 21:32:08 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_typelib_file_path): try win64
	  registry entry at first. [ruby-dev:41674] [Bug #3464]

Thu Jul  1 04:21:10 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c: don't use __P.

Wed Jun 30 07:29:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_rubyoptions.rb (test_script_from_stdin): by using
	  a pipe, get rid of not-well-defined behavior after the child
	  process terminated in pty.

Wed Jun 30 02:37:30 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* thread_pthread.c (get_stack): use pthread_getthrds_np() for AIX.

	* configure.in: ditto.

Wed Jun 23 21:17:32 2010  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (ruby_getaddrinfo__darwin): new workaround for
	  getaddrinfo problem on Mac OS X Snow Leopard.  [ruby-core:29427]
	  patch by Wataru Kimura.  [ruby-core:30842]

Wed Jun 23 06:44:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (fchown): need to check.  a patch by Eric Wong
	  at [ruby-core:30818].

	* io.c (argf_next_argv): check for setting owner/group.

Tue Jun 22 21:33:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/optparse/test_summary.rb: fixed superclass so that it run
	  solely.

Sat Jun 19 03:35:58 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb (resolve_klass): fix the
	  exception message when attempting to load an unknown class.  Thanks
	  nobu! [ruby-dev:41399]

	* test/psych/test_psych.rb: test for the exception message

Fri Jun 18 01:50:21 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* object.c: Object#public_methods, private_methods, etc. returns
	  method ids that belong to the class or the singleton class(es) of
	  the object.  [ruby-dev:41613]

	* class.c: on the other hand, Module#public_instance_methods, etc.
	  returns method ids that belong to the module itself (even if the