@@ -1,3 +1,8 @@
+Wed Jun 23 23:49:21 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/raddrinfo.c (str_is_number): renamed from str_isnumber to
+	  avoid confusion to str_isnumber in ext/socket/getaddrinfo.c.
+
 Wed Jun 23 21:32:08 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>
 
 	* ext/win32ole/win32ole.c (reg_get_typelib_file_path): try win64
